[metadata]
name = laslnet
version = 0.0.1
author = Thomas Kreuzer
author_email = thomas.kreuzer@rwth-aachen.de
description = Landslide detection network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thkrz/laslnet
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requies = >=3.10
install_requires =
  numpy
  torch

[options.entry_points]
console_scripts =
  laslnet = laslnet:laslnet_main

[options.packages.find]
where = src
